# haloumi

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: cmp.rs  constraints.rs  eqv.rs  error.rs  expressions.rs  felt.rs  info_traits.rs  lib.rs  lookups.rs  query.rs  slot.rs  synthesis.rs  table.rs
core/src/slot/: arg.rs  cell.rs  field.rs  output.rs
ir/: Cargo.toml  README.md
ir/src/: canon.rs  circuit.rs  diagnostics.rs  error.rs  expr.rs  groups.rs  lib.rs  meta.rs  printer.rs  slot.rs  stmt.rs  traits.rs
ir/src/expr/: aexpr.rs  bexpr.rs
ir/src/groups/: callsite.rs
ir/src/stmt/: assert.rs  assume_determ.rs  call.rs  comment.rs  cond_block.rs  constraint.rs  post_cond.rs  seq.rs  test.rs
ir/src/stmt/test/: helpers.rs
lowering/: Cargo.toml  README.md
lowering/src/: error.rs  lib.rs  lowerable.rs
