[workspace]
members = [ 
  "core"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Daniel Dominguez (Veridise) <daniel@veridise.com>"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/Veridise/haloumi"
license-file = "LICENSE"

[workspace.dependencies]
ff = "0.13"
thiserror = "2.0"

