[package]
name = "haloumi-core"
description = "Core types and traits of the Halo2 frontend for LLZK"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
rust-version = {workspace = true}
readme = "README.md"
repository = {workspace = true}
license-file = {workspace = true}

[dependencies]
ff.workspace = true
thiserror.workspace = true
eqv.workspace = true
internment.workspace = true
num-bigint.workspace = true
log.workspace = true


[dev-dependencies]
simplelog = {version = "0.12", features = ["test"] }
similar-asserts = "1.7"
quickcheck = "1"
quickcheck_macros = "1"
ff = { workspace = true, features = ["derive"] }
halo2curves = "0.9"

